--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -59,8 +59,10 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.5.0",
     "postcss-safe-parser": "4.0.1",
+    "postcss-scopify": "0.1.9",
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
+    "react-web-component-style-loader": "0.1.4-alpha",
     "resolve": "1.9.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
@@ -81,7 +83,7 @@
   "browserslist": [
     ">0.2%",
     "not dead",
-    "not ie <= 11",
+    "not ie < 11",
     "not op_mini all"
   ]
 }
