No need to give the script a new name

--- a/packages/create-react-app/package.json
+++ b/packages/create-react-app/package.json
@@ -19,7 +19,7 @@
     "yarn.lock.cached"
   ],
   "bin": {
-    "create-react-webcomponent": "./index.js"
+    "create-react-app": "./index.js"
   },
   "dependencies": {
     "chalk": "1.1.3",
