--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -2,13 +2,13 @@
   "name": "react-scripts",
   "version": "2.1.3",
   "description": "Configuration and scripts for Create React App.",
-  "repository": "facebook/create-react-app",
+  "repository": "tfso/create-react-app",
   "license": "MIT",
   "engines": {
     "node": ">=6"
   },
   "bugs": {
-    "url": "https://github.com/facebook/create-react-app/issues"
+    "url": "https://github.com/tfso/create-react-app/issues"
   },
   "files": [
     "bin",
@@ -83,7 +83,7 @@
   "browserslist": [
     ">0.2%",
     "not dead",
-    "not ie < 11",
+    "not ie <= 11",
     "not op_mini all"
   ]
 }
