--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-scripts",
+  "name": "@tfso/react-scripts-webcomponent",
   "version": "2.1.3",
   "description": "Configuration and scripts for Create React App.",
   "repository": "tfso/create-react-app",
